--- a/101435481-lab-test2-comp3133/src/index.html
+++ b/101435481-lab-test2-comp3133/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>101435481LabTest2Comp3133</title>
+  <title>Lab Test 2 (101435481)</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -10,6 +10,8 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body class="mat-typography">
-  <app-root></app-root>
+
+<app-root></app-root>
+
 </body>
 </html>
